# rozprochy

./: README.md
Ciolczyk_Michal_1/: CMakeLists.txt  Zad1Server.java  Zad2Server.java  Zad3.java  build.sh  clean.sh  zad1_client  zad1_client.c  zad2_client  zad2_client.c
Ciolczyk_Michal_2/: .gitignore
Ciolczyk_Michal_3/: .gitignore  pom.xml
Ciolczyk_Michal_4/: clean.sh  create.sh  events.idl
Ciolczyk_Michal_4/zad0/corba/: Test.IOR
Ciolczyk_Michal_4/zad0/corba/idl/: sr.idl
Ciolczyk_Michal_4/zad0/ice/: config.client  config.server
Ciolczyk_Michal_4/zad0/ice/src/: Client.java  HelloI.java
Ciolczyk_Michal_4/zad1/: clean.sh  create.sh  events.idl
Ciolczyk_Michal_5/client/: .gitignore  CMakeLists.txt  main.cpp
Ciolczyk_Michal_5/client-scala/: client.config  compileIce.sh
Ciolczyk_Michal_5/client/slice/: compileIce.sh
Ciolczyk_Michal_5/client/src/main/scala/: SilverAccountOperations.scala
Ciolczyk_Michal_5/server/: .gitignore  block2.sh  cert.config  getCert.sh  pom.xml  server.config  unblock.sh
Ciolczyk_Michal_6/utils/: client.sh  servers.sh
lab1/: .gitignore  CMakeLists.txt  Zad2Server.java  zad2_client.c
lab3/: runclient.sh  runserver.sh
lab4/zad0/corba/: ns.ior  ref1.ior
lab4/zad0/corba/idl/: compileidl.sh
lab4/zad0/corba/src/edu/sr/impl/: I1Impl.java
lab4/zad0/ice/: README.md
lab4/zad0/ice/slice/: Hello.ice  compileslice.sh
lab4/zad0/ice/src/: Server.java
lab4/zad1/: events.idl
lab5/client/: build.sbt  client.config
lab5/server/: block.sh  getCert.sh  pom.xml  server.config  sr2015ca.crt
lab6/: .gitignore  pom.xml
(+83 files in other folders)
